--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
+        "laravel/framework": "12.20",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "nativephp/electron": "^1.1"
     },
     "require-dev": {
